--- a/BetterGeoscape/BetterGeoscape.csproj
+++ b/BetterGeoscape/BetterGeoscape.csproj
@@ -96,5 +96,6 @@
     <None Include="Assets\Localization\PR_CH_Story_Localization.csv" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
